# rag-myFlow

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-22-rag-myflow-implementation.md
docs/superpowers/specs/: 2026-04-22-rag-myflow-design.md
docs/upstream/: ragflow-capability-inventory.md
scripts/: dev_backend.sh  dev_web.sh
src/rag_myflow/: config.py
src/rag_myflow/agent/: models.py  service.py
src/rag_myflow/api/: app.py
src/rag_myflow/api/routes/: chat.py  documents.py  health.py  workflows.py
src/rag_myflow/domain/: models.py  store.py
src/rag_myflow/ingest/: models.py  service.py  validators.py
src/rag_myflow/rag/: models.py  service.py
tests/api/: test_chat.py  test_documents.py  test_health.py  test_workflows.py
tests/integration/: test_smoke.py
tests/unit/: test_config.py
tests/unit/agent/: test_workflow_service.py
tests/unit/ingest/: test_ingest_service.py  test_validators.py
tests/unit/rag/: test_service.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx
web/src/lib/: api.ts
web/src/pages/: ChatPage.tsx  KnowledgeBasePage.tsx  SettingsPage.tsx  WorkflowPage.tsx
web/src/test/: app.test.tsx
